update after internship

--- a/blitz.html
+++ b/blitz.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jeu vidéo de Snake - mobile compatible, et de difficulté croissante. Exercice Javascript à l'aide du tutoriel d'Enzo Ustariz completé par mes soins">
-    <title>Super Blitz - Bonus Page - Pierre-Loup Perez - Web Developper</title>
+    <meta name="description" content="Jeu vidéo de Snake - mobile compatible, et de difficulté croissante. Exercice Javascript à l'aide du tutoriel d'Enzo Ustariz complété par mes soins">
+    <title>Super Blitz - Bonus Page - Pierre-Loup Perez - Web Developer</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -99,24 +99,25 @@
         <p>Le jeu se joue au click dans le cadre, cela déclenche la chute d'une bombe.</p>
         <p>Le but est de détruire tous les immeubles avant que l'avion ne les percute.</p>
         <p>Une nouvelle bombe est chargée dès que la première a terminé sa chute.</p>
-        <p>L'algorythme de score est secret, à vous de le deviner si cela vous amuse. Par contre, le score n'est valable que si vous terminez le jeu</p>
+        <p>L'algorithme de score est secret, à vous de le deviner si cela vous amuse. Par contre, le score n'est valable que si vous terminez le jeu</p>
       </article>
 
     </main>
 
-   <!-- Footer -->
-   <footer class="row text-center justify-content-center pt-3 mx-1">
+  <!-- Footer -->
+  <footer class="row text-center justify-content-center pt-3 mx-1">
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
@@ -125,7 +126,9 @@
       <a href="mentions.html">Mentions Légales</a>
       <a href="contact.html">Contactez-moi</a>
     </section>
-    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+    <p class="col-12 mt-2">
+      &copy; <span id="annee"></span> - Pierre-Loup Perez
+    </p>
   </footer>
 
     <!-- Scripts -->
