--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Contactez Pierre-Loup Perez - Web Developper, par formulaire de contact sécurisé. Je suis à l'écoute de vos projets, de vos idées, comme de vos suggestions.">
-  <title>Contact - Pierre-Loup Perez - Web Developper</title>
+    content="Contactez Pierre-Loup Perez - Web Developer, par formulaire de contact sécurisé. Je suis à l'écoute de vos projets, de vos idées, comme de vos suggestions.">
+  <title>Contact - Pierre-Loup Perez - Web Developer Javascript (VueJs)</title>
   <link rel="stylesheet" href="https://bootswatch.com/5/spacelab/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles/style.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
@@ -98,7 +98,7 @@
           s'il-vous-plait</span>
         <div class="input-group">
           <input type="text" name="name" id="name" placeholder="Votre nom" class="form-control" required>
-          <img src="" alt="icone de validation" class="icone-verif ms-2" title="icone de validation">
+          <img src="" alt="icône de validation" class="icone-verif ms-2" title="icône de validation">
         </div>
 
       </div>
@@ -108,7 +108,7 @@
         <span class="message-alerte text-info">Veuillez entrer un mail valide s'il-vous-plait</span>
         <div class="input-group">
           <input type="email" name="email" id="email" placeholder="exemple@mail.fr" class="form-control" required>
-          <img src="" alt="icone de validation" class="icone-verif ms-2" title="icone de validation">
+          <img src="" alt="icône de validation" class="icone-verif ms-2" title="icône de validation">
         </div>
       </div>
 
@@ -118,7 +118,7 @@
         <div class="input-group">
           <textarea name="message" id="message" rows="10" class="form-control" placeholder="Corps de votre message"
             required></textarea>
-          <img src="" alt="icone de validation" class="icone-verif ms-2" title="icone de validation">
+          <img src="" alt="icône de validation" class="icone-verif ms-2" title="icône de validation">
         </div>
       </div>
 
@@ -144,13 +144,14 @@
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
@@ -159,7 +160,9 @@
       <a href="mentions.html">Mentions Légales</a>
       <a href="contact.html">Contactez-moi</a>
     </section>
-    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+    <p class="col-12 mt-2">
+      &copy; <span id="annee"></span> - Pierre-Loup Perez
+    </p>
   </footer>
 
   <!-- Scripts -->
