--- a/cv.html
+++ b/cv.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="CV-Curriculum Vitae de Pierre-Loup Perez - Web Developper Fullstack, Compétences techniques, Expériences professionnelles, Formations et Intérets personnels">
-  <title>Curriculum Vitae - Pierre-Loup Perez - Web Developper</title>
+    content="CV-Curriculum Vitae de Pierre-Loup Perez - Web Developer Fullstack, Compétences techniques, Expériences professionnelles, Formations et Intérêts personnels">
+  <title>Curriculum Vitae - Pierre-Loup Perez - Web Developer Javascript (VueJs)</title>
   <link rel="stylesheet" href="https://bootswatch.com/5/spacelab/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles/style.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
@@ -76,9 +76,9 @@
   <main class="container text-center ">
     <!-- titre du CV -->
     <div class="row align-items-center justify-content-center alert alert-secondary py-5 py-md-4 shadow">
-      <h2 class="col-12 col-sm-6 col-md-8 text-primary display-5 my-auto">Développeur Web Junior</h2>
+      <h2 class="col-12 col-sm-6 col-md-8 text-primary display-5 my-auto">Développeur Web Javascript (VueJs)</h2>
       <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup"
-        title="Photo de CV de Pierre-Loup Perez - Web Developper">
+        title="Photo de CV de Pierre-Loup Perez - Web Developer">
     </div>
     <p class="mt-3"><span id="age"></span> ans, permisB, véhiculé</p>
 
@@ -97,13 +97,14 @@
           </h3>
           <section class="row align-items-center">
             <h4 class="col-12 col-lg-2">WebDev</h4>
-            <p class="col-12 col-lg-5">
+            <p class="col-12 col-lg-6">
+              <img src="/assets/js.png" alt="Js" class="icone" title="Js">
+              <img src="/assets/typescript.png" alt="typescript" class="icone" title="Typescript">
+              <img src="/assets/vue-js-logo.png" alt="vue" class="icone" title="VueJs">
               <img src="/assets/html.png" alt="Html" class="icone" title="Html 5">
               <img src="/assets/css.png" alt="Css" class="icone" title="Css 3">
               <img src="/assets/tailwind.png" alt="tailwind" class="icone" title="Tailwind Css">
               <img src="/assets/bootstrap-logo.png" alt="bootstrap" class="icone" title="Bootstrap">
-              <img src="/assets/js.png" alt="Js" class="icone" title="Js">
-              <img src="/assets/typescript.png" alt="typescript" class="icone" title="Typescript">
             </p>
             <p class="col-12 col-lg-4">
               <img src="/assets/nodejs-1-logo.png" alt="NodeJs" class="icone" title="Node Js">
@@ -151,6 +152,17 @@
           <h3 class="alert alert-secondary shadow-sm">
             <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Experiences
           </h3>
+          <section class="row align-items-center">
+            <h4 class="col-12 col-lg-3">Jan-Fev 2022</h4>
+            <div class="col-12 col-lg-9">
+              <Affectations><span class="text-primary">Stagiaire</span> en développement web front VueJs au sein de
+                l'entreprise <a href="https://www.bedrockstreaming.com/" target="_blank">BedrockStreaming</a></p>
+
+            </div>
+          </section>
+
+          <hr class="mx-5">
+
           <section class="row align-items-center">
             <h4 class="col-12 col-lg-3">2011-2021</h4>
             <div class="col-12 col-lg-9">
@@ -231,37 +243,44 @@
 
             <section class="align-items-center mt-3 col-12 col-lg-6">
               <a href="/assets/cert-JS-SoloLearn.png">
-                <img src="/assets/cert-JS-SoloLearn.png" alt="Certification Javascript" class="certif border shadow-sm" title="Certification Javascript ES6 @ Sololearn">
+                <img src="/assets/cert-JS-SoloLearn.png" alt="Certification Javascript" class="certif border shadow-sm"
+                  title="Certification Javascript ES6 @ Sololearn">
               </a>
               <p>Javascript ES6 @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
             </section>
 
             <section class="align-items-center mt-3 col-12 col-lg-6">
               <a href="/assets/cert-PHP-SoloLearn.jpg" class="">
-                <img src="/assets/cert-PHP-SoloLearn.jpg" alt="Certification PHP" class="certif border shadow-sm" title="Certification PHP @ Sololearn">
+                <img src="/assets/cert-PHP-SoloLearn.jpg" alt="Certification PHP" class="certif border shadow-sm"
+                  title="Certification PHP @ Sololearn">
               </a>
               <p class="">PHP @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
             </section>
 
             <section class="align-items-center mt-3 col-12 col-lg-6">
               <a href="/assets/cert-HTML-SoloLearn.jpg" class="">
-                <img src="/assets/cert-HTML-SoloLearn.jpg" alt="Certification HTML5"class="certif border shadow-sm" title="Certification HTML5 @ Sololearn">
+                <img src="/assets/cert-HTML-SoloLearn.jpg" alt="Certification HTML5" class="certif border shadow-sm"
+                  title="Certification HTML5 @ Sololearn">
               </a>
               <p class="">HTML5 @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
             </section>
 
             <section class="align-items-center mt-3 col-12 col-lg-6">
               <a href="/assets/cert-CSS-SoloLearn.jpg" class="">
-                <img src="/assets/cert-CSS-SoloLearn.jpg" alt="Certification CSS3" class="certif border shadow-sm" title="Certification CSS3 @ Sololearn">
+                <img src="/assets/cert-CSS-SoloLearn.jpg" alt="Certification CSS3" class="certif border shadow-sm"
+                  title="Certification CSS3 @ Sololearn">
               </a>
               <p class="">CSS3 @ <a href="https://www.sololearn.com/home" target="_blank">Sololearn</a></p>
             </section>
 
             <section class="align-items-center mt-3 col-12 col-lg-6">
-              <a href="https://www.linkedin.com/posts/pierre-loup-perez_linkedinskillassessment-activity-6875003646698909697-8svm" class="" target="_blank">
-                <img src="/assets/Linkedin.svg" alt="Certification HTML5" class="certif border shadow-sm" title="Certification HTML5 @ LinkedIn">
+              <a href="https://www.linkedin.com/posts/pierre-loup-perez_linkedinskillassessment-activity-6875003646698909697-8svm"
+                class="" target="_blank">
+                <img src="/assets/Linkedin.svg" alt="Certification HTML5" class="certif border shadow-sm"
+                  title="Certification HTML5 @ LinkedIn">
               </a>
-              <p class="">HTML5 @ <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a></p>
+              <p class="">HTML5 @ <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+              </p>
             </section>
 
           </div>
@@ -275,10 +294,10 @@
 
     <hr>
 
-    <!-- Pied du CV - Intérets -->
+    <!-- Pied du CV - Intérêts -->
     <article class="row align-items-center justify-content-evenly mx-1">
       <h3 class="col-12 col-md-3 alert alert-secondary shadow-sm">
-        <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Interets
+        <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Intérêts
       </h3>
       <ul class="col-12 col-md-8 text-start">
         <li>Informatique : intérêt personnel pour la Cybersécurité</li>
@@ -307,13 +326,14 @@
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
@@ -322,9 +342,10 @@
       <a href="mentions.html">Mentions Légales</a>
       <a href="contact.html">Contactez-moi</a>
     </section>
-    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+    <p class="col-12 mt-2">
+      &copy; <span id="annee"></span> - Pierre-Loup Perez
+    </p>
   </footer>
-
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
