--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Visitez le portfolio de Pierre-Loup Perez - Web Developper, découvrez ses compétences et les projets qu'il à réalisé, utilisant différentes technologies Web." />
-  <title>Portfolio de Pierre-Loup Perez - Web Developper</title>
+    content="Visitez le portfolio de Pierre-Loup Perez - Web Developer, découvrez ses compétences et les projets qu'il à réalisé, utilisant différentes technologies Web." />
+  <title>Portfolio de Pierre-Loup Perez - Web Developer Javascript (VueJs)</title>
   <link rel="stylesheet" href="https://bootswatch.com/5/spacelab/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles/style.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
@@ -75,7 +75,7 @@
     <img src="/assets/android-chrome-192x192.png" alt="logo pilou dev web" class="logo80">
     <figure class="text-intro">
       <blockquote class="blockquote">
-        <h1 class="mb-2 display-4">Développeur Web et Web Mobile</h1>
+        <h1 class="mb-2 display-4">Développeur Web - Javascript (VueJs)</h1>
       </blockquote>
       <figcaption class="blockquote-footer text-dark">
         Portfolio de <cite title="Source Title">Pierre-Loup Perez</cite>
@@ -102,9 +102,9 @@
     <article class="my-3 row align-items-center">
       <h2 class="col-12 col-md-6">Curriculum Vitae</h2>
       <section class="col-12 col-md-6 justify-content-center">
-        <p>Front: Html/Css Scss/Sass Javascript Wordpress</p>
-        <p>Back: Php/mySql Laravel</p>
-        <p>Softskills: Initiatives Organisation Adaptation Autonomie</p>
+        <p>Front: Html/Css Scss/Sass  Javascript(VueJs) Wordpress</p>
+        <p>Back: Php/mySql Laravel NodeJs</p>
+        <p>Softskills: Autonomie Initiatives Organisation Adaptation</p>
         <a href="/cv.html">en savoir plus</a>
       </section>
     </article>
@@ -119,7 +119,7 @@
             col-12 col-sm-6 col-md-4
           ">
         <div class="card-header bg-primary bg-opacity-25 border border-light">
-          <img class="card-img-top mb-2" src="/assets/pilou_artreduit.jpg" alt="ecran d'accueil pilou_art"
+          <img class="card-img-top mb-2" src="/assets/pilou_artreduit.jpg" alt="écran d'accueil pilou_art"
             title="Page d'accueil de Pilou_art galerie d'images" />
           Galerie d'image
         </div>
@@ -152,11 +152,11 @@
           ">
           <div class="card-header bg-primary bg-opacity-25 border border-light">
           <img class="card-img-top mb-2" src="/assets/maitressegereduit.jpg"
-            alt="ecran d'accueil maitresse gé" title="Page d'accueil du Blog de Maitresse Gé, Instagrameuse" />
+            alt="écran d'accueil maîtresse gé" title="Page d'accueil du Blog de Maîtresse Gé, Instagrameuse" />
           Wordpress
         </div>
         <div class="card-body">
-          <h3 class="card-title">Le blog de Maitresse Gé</h3>
+          <h3 class="card-title">Le blog de Maîtresse Gé</h3>
           <div class="card-text">
             <p>Projet "Wordpress" thème OceanWP-Elementor</p>
             <p>
@@ -183,8 +183,8 @@
             col-12 col-sm-6 col-md-4
           ">
           <div class="card-header bg-primary bg-opacity-25 border border-light">
-          <img class="card-img-top mb-2" src="/assets/portfolioreduit.jpg" alt="ecran CV portfolio"
-            title="Page du CV de Pierre-Loup Perez - Web Developper" />
+          <img class="card-img-top mb-2" src="/assets/portfolioreduit.jpg" alt="écran CV portfolio"
+            title="Page du CV de Pierre-Loup Perez - Web Developer" />
           Portfolio
         </div>
         <div class="card-body">
@@ -226,13 +226,14 @@
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
