--- a/mentions.html
+++ b/mentions.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Mentions légales du Portfolio de Pierre-Loup Perez - Web Developper, Propriété intellectuelle, Gestion des données personnelles et recours possibles">
-    <title>Mentions Légales - Pierre-Loup Perez - Web Developper</title>
+    <meta name="description" content="Mentions légales du Portfolio de Pierre-Loup Perez - Web Developer, Propriété intellectuelle, Gestion des données personnelles et recours possibles">
+    <title>Mentions Légales - Pierre-Loup Perez - Web Developer Javascript (VueJs)</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -78,7 +78,7 @@
           par
           <cite title="Source Title"
             ><a href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html"  rel="nofollow"
-              >générateur de mentions legales</a
+              >générateur de mentions légales</a
             ></cite
           >
         </figcaption>
@@ -122,7 +122,7 @@
               >pierreloup.perez@gmail.com</a>
             </strong>
             <br>
-          L’hebergeur du site est :
+          L’hébergeur du site est :
           <strong>Netlify 2325 3rd Street, Suite 296 94107 San Francisco</strong>
         </p>
   
@@ -132,7 +132,7 @@
             <a
               href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html"
               target="_blank"  rel="nofollow"
-              >générateur de mentions legales</a>
+              >générateur de mentions légales</a>
               </strong>.
               <br>
           Une eau toujours potable avec les <strong>
@@ -222,8 +222,8 @@
         toutefois configurer le navigateur de son ordinateur pour refuser
         l’installation des cookies, sachant que le refus d'installation d'un
         cookie peut entraîner l’impossibilité d’accéder à certains services.
-        Pour tout bloquage des cookies, tapez dans votre moteur de recherche :
-        bloquage des cookies sous IE ou firefox et suivez les instructions en
+        Pour tout blocage des cookies, tapez dans votre moteur de recherche :
+        blocage des cookies sous IE ou firefox et suivez les instructions en
         fonction de votre version.
       </p>
 
@@ -283,19 +283,20 @@
       <a href="#top" class="btn btn-secondary me-5 shadow">Remonter</a>
     </div>
 
-   <!-- Footer -->
-   <footer class="row text-center justify-content-center pt-3 mx-1">
+  <!-- Footer -->
+  <footer class="row text-center justify-content-center pt-3 mx-1">
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
@@ -304,9 +305,10 @@
       <a href="mentions.html">Mentions Légales</a>
       <a href="contact.html">Contactez-moi</a>
     </section>
-    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+    <p class="col-12 mt-2">
+      &copy; <span id="annee"></span> - Pierre-Loup Perez
+    </p>
   </footer>
-
     <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
