--- a/presentation.html
+++ b/presentation.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Présentation de Pierre-Loup Perez - Web Developper, ses compétences en dev Web front et Back, ses expériences professionnelles atypiques et sa personalité.">
-  <title>Présentation de Pierre-Loup Perez - Web Developper</title>
+    content="Présentation de Pierre-Loup Perez - Web Developer, ses compétences en dev Web front et Back, ses expériences professionnelles atypiques et sa personnalité.">
+  <title>Présentation de Pierre-Loup Perez - Web Developer Javascript (VueJs)</title>
   <link rel="stylesheet" href="https://bootswatch.com/5/spacelab/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles/style.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
@@ -82,7 +82,7 @@
       <p>Ayant un passé de <a href="#musmili">musicien-militaire</a>, je peux vous faire profiter d'expériences
         incomparables, et d'un savoir-être très apprécié par mes collègues.</p>
       <p>Parmi mes traits de caractère, les plus présents sont ces <a href="#3c">"3C"</a> qui me tiennent
-        particulièrement à coeur: être créatif, toujours rester constructif, et ne jamais arreter d'être curieux.</p>
+        particulièrement à coeur: être créatif, toujours rester constructif, et ne jamais arrêter d'être curieux.</p>
     </article>
 
     <hr class="mx-5 bg-primary">
@@ -93,14 +93,15 @@
           <img src="/assets/favicon.ico" alt="mini-logo" class="icone">
           Développeur Web Fullstack Junior
         </h3>
-        <p>Durant ma formation de Développeur Web et Web Mobile au GRETA Lyon-Métropole, j'ai été formé à travailler
+        <p>Durant ma formation de Développeur Web et Web Mobile au GRETA Lyon-Métropole puis mon stage chez <a
+            href="https://www.bedrockstreaming.com/" target="_blank">BedrockStreaming</a>, j'ai été formé à travailler
           avec différentes technologies.</p>
       </section>
       <section class="col-12 col-sm-6">
         <h4>Front-end:</h4>
         <ul>
           <li>Html/Css</li>
-          <li>Javascript</li>
+          <li>Javascript et VueJs</li>
           <li>Scss/Sass</li>
           <li>Bootstrap</li>
           <li>Tailwind</li>
@@ -110,20 +111,31 @@
       <section class="col-12 col-sm-6">
         <h4>Back-end:</h4>
         <ul>
-          <li>NodeJs</li>
+          <li>NodeJs et ExpressJs</li>
           <li>PHP/mySql phpMyAdmin</li>
           <li>Laravel framework</li>
-          <li>API Rest avec laravel<br>Coté api et coté client</li>
+          <li>API Rest avec Laravel<br>Coté api et coté client</li>
         </ul>
       </section>
       <section class="col-12">
         <p>Ainsi que diverses <strong>compétences transverses</strong> du développeur web</p>
         <ul>
           <li>UX et UI</li>
-          <li>SEO et referencement</li>
+          <li>SEO et référencement</li>
           <li>Responsivité</li>
           <li>Accessibilité</li>
         </ul>
+      </section>
+      <section class="col-12">
+        <h4>Stage chez <a href="https://www.bedrockstreaming.com/" target="_blank">BedrockStreaming</a></h4>
+        <p>Durant ce stage dans cette entreprise proposant un <abbr title="Software as a service">Saas</abbr> de streaming de videos pour le groupe M6 et les chaines du groupe RTL.</p>
+        <p>J'ai intégré la Product Line "Customer tools" responsable du back-office et plus précisément au sein de cette dernière, l'équipe Moonlight, en charge du développement front.</p>
+        <p>Ce stage m'a permis de travailler avec le framework <a href="https://vuejs.org/" target="_blank">VueJs</a> dans lequel j'ai principalement travaillé à la réalisation d'un composant d'upload d'image et à son intégration dans le back-office.</p>
+        <p>Pour cela, me suis occupé de la création du composant en VueJs,comprenant une zone de glisser-déposer, un bouton de selection de fichier, des test coté client des dimensions d'image et du type de fichier, ainsi que de l'affichage de l'image sélectionnée (provenant de l'utilisateur ou du serveur si une image était précédemment chargee) et d'une modification de l'affichage en fonction de la présence ou non d'une image affichée.</p>
+        <p>J'ai ensuite créé les tests unitaires et les test d'accessibilité avec <a href="https://storybook.fr.softonic.com/" target="_blank">Storybook</a>,les tests <abbr title="End-to-end">E2E</abbr> avec <a href="https://www.cypress.io/" target="_blank">Cypress</a> ainsi que la rédaction de la documentation technique (en anglais) concernant ces trois types de test.</p>
+        <p>A la suite de cela, j'ai intégré le composant dans une des application du back-office en réalisant l'intégration puis le branchement du composant à l'API pour l'afficher dynamiquement selon les attentes du serveur (en terme de format d'image et de type de fichier). Enfin, j'ai ajouté l'envoi des commandes d'ajout ou de suppression d'image au serveur.</p>
+        <p>Tout cela a été fait en suivant les règles de workflow de l'équipe, principalement concernant le process de déploiement(GitHub-CI/CD), le linting et formatting des fichiers et les revues de code.</p>
+
       </section>
     </article>
 
@@ -149,7 +161,7 @@
         <p>Vous trouverez en moi quelqu'un d'à la fois <strong>autonome</strong> et appréciant le <strong>travail en
             équipe</strong></p>
         <p>Je n'ai aucun problème pour trouver ma place dans une ambiance de travail, dans une équipe, et j'ai une
-          facilité à apporter de la cohésion dans une équipe, car c'est un élément très fort de ma personalité</p>
+          facilité à apporter de la cohésion dans une équipe, car c'est un élément très fort de ma personnalité</p>
         <p>Le respect est profondément ancré en moi, envers tout un chacun, quel que soit son rang social ou sa position
           dans l'entreprise</p>
       </section>
@@ -178,7 +190,7 @@
       </section>
       <section>
         <h4 class="ms-3">Curieux</h4>
-        <p>Je suis d'un naturel curieux et emerveillé de tout. J'adore <strong>découvrir</strong> et
+        <p>Je suis d'un naturel curieux et émerveillé de tout. J'adore <strong>découvrir</strong> et
           <strong>apprendre</strong> de nouvelles choses.</p>
       </section>
     </article>
@@ -205,13 +217,14 @@
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
@@ -220,7 +233,9 @@
       <a href="mentions.html">Mentions Légales</a>
       <a href="contact.html">Contactez-moi</a>
     </section>
-    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+    <p class="col-12 mt-2">
+      &copy; <span id="annee"></span> - Pierre-Loup Perez
+    </p>
   </footer>
 
   <!-- Scripts -->
