--- a/projets.html
+++ b/projets.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Principaux projets en Web Developpement, réalisés par Pierre-Loup Perez, avec Javascript, Sass/Scss, Bootstrap, Wordpress">
+    content="Principaux projets en Web Développement, réalisés par Pierre-Loup Perez, avec Javascript, Sass/Scss, Bootstrap, Wordpress">
   <title>Projets de développement web - Pierre-Loup Perez</title>
   <link rel="stylesheet" href="https://bootswatch.com/5/spacelab/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles/style.css" />
@@ -90,7 +90,7 @@
               <a class="nav-link" href="#portfolio">Mon Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#maitressege">Maitresse Gé</a>
+              <a class="nav-link" href="#maitressege">Maîtresse Gé</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#pilouart">Pilou_art</a>
@@ -119,11 +119,10 @@
           animation en Javascript.</p>
         <p>Il est construit à l'aide de bootstrap5 et du thème <a href="https://bootswatch.com/spacelab/">Spacelab</a>
           de Bootswatch et un peu de custom Css.</p>
-        <p>Le fond de page est une animation Js a l'aide de la librtairie <a
+        <p>Le fond de page est une animation Js a l'aide de la librairie <a
             href="https://particles.js.org/">tsParticles</a>.</p>
         <p>C'est le site sur lequel vous naviguez actuellement.</p>
-        <p><small><span class="badge rounded-pill bg-secondary">Dernier ajout</span> Deuxième jeu en JS et amélioration
-          graphique avec plus de cohérence visuelle</small></p>
+        <p><small><span class="badge rounded-pill bg-secondary">Dernier ajout</span> Mise à jour du portfolio suite à mon stage chez <a href="https://www.bedrockstreaming.com/" target="_blank">BedrockStreaming</a></small></p>
         <div class="row justify-content-evenly">
           <a href="https://perezpl.fr" class="btn btn-secondary col-12 col-md-5">Revenir à l'accueil</a>
           <a href="https://github.com/devipilou/portfolio" target="_blank" class="btn btn-light col-12 col-md-5">Code source du site</a>
@@ -131,14 +130,14 @@
       </section>
     </article>
 
-    <!-- Maitresse Gé -->
+    <!-- Maîtresse Gé -->
     <article class="row border border-2 border-primary rounded p-3 mt-lg-5 shadow" id="maitressege">
       <section class="titreProj col-12 text-center">
-        <h2>Blog de MaitresseGe</h2>
+        <h2>Blog de MaîtresseGe</h2>
       </section>
       <section class="imgProj col-12 col-lg-6 order-lg-2">
         <img class="img-fluid border border-primary rounded" src="/assets/maitressege.jpg"
-          alt="ecran accueil maitressege" title="Page d'accueil du Blog de Maitresse Gé, Instagrameuse">
+          alt="ecran accueil maitressege" title="Page d'accueil du Blog de Maîtresse Gé, Instagrameuse">
       </section>
       <section class="txtProj col-12 col-lg-6 mt-1 d-grid">
         <h3>
@@ -147,7 +146,7 @@
         </h3>
         <p>Ce projet est pour moi presque un prétexte pour découvrir <a href="https://wordpress.com/fr/"
             target="_blank">Wordpress</a>. Qu'on apprécie ou non ce CMS, il n'en est pas moins un incontournable outil
-          web et il est essentiel d'en connaitre l'utilisation.</p>
+          web et il est essentiel d'en connaître l'utilisation.</p>
         <p>Ce site est construit sur le thème <a href="https://oceanwp.org/" target="_blank">OceanWP</a>, et à l'aide
           d'extensions comme Elementor, Wordfence, ou ContactForm7. Il fait également appel à une api smtp gmail pour
           gérer les envois de mail depuis le formulaire.</p>
@@ -209,13 +208,14 @@
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
@@ -224,7 +224,9 @@
       <a href="mentions.html">Mentions Légales</a>
       <a href="contact.html">Contactez-moi</a>
     </section>
-    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+    <p class="col-12 mt-2">
+      &copy; <span id="annee"></span> - Pierre-Loup Perez
+    </p>
   </footer>
 
   <!-- Scripts -->
