--- a/snake.html
+++ b/snake.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jeu vidéo de Snake - mobile compatible, et de difficulté croissante. Exercice Javascript à l'aide du tutoriel d'Enzo Ustariz completé par mes soins">
-    <title>Snake - Bonus Page - Pierre-Loup Perez - Web Developper</title>
+    <meta name="description" content="Jeu vidéo de Snake - mobile compatible, et de difficulté croissante. Exercice Javascript à l'aide du tutoriel d'Enzo Ustariz complété par mes soins">
+    <title>Snake - Bonus Page - Pierre-Loup Perez - Web Developer</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -97,24 +97,25 @@
 
       <article class="text-center">
         <p>Un grand merci à Enzo Ustariz de <a href="https://www.ecole-du-web.net/">l'école du Web</a> pour son tuto qui explique comment coder ce jeu ce jeu.</p>
-        <p>Pour les amateurs de record, le jeu ne comprend pas deux mouvements plus rapprochés que sa fréquence de rafraichissement d'image (5fps au début du jeu) et si vous battez mon record, ouvrez votre console et faites un screenshot pour me l'envoyer.</p>
+        <p>Pour les amateurs de record, le jeu ne comprend pas deux mouvements plus rapprochés que sa fréquence de rafraîchissement d'image (5fps au début du jeu) et si vous battez mon record, ouvrez votre console et faites un screenshot pour me l'envoyer.</p>
       </article>
 
     </main>
 
-   <!-- Footer -->
-   <footer class="row text-center justify-content-center pt-3 mx-1">
+  <!-- Footer -->
+  <footer class="row text-center justify-content-center pt-3 mx-1">
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
@@ -123,7 +124,9 @@
       <a href="mentions.html">Mentions Légales</a>
       <a href="contact.html">Contactez-moi</a>
     </section>
-    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+    <p class="col-12 mt-2">
+      &copy; <span id="annee"></span> - Pierre-Loup Perez
+    </p>
   </footer>
 
     <!-- Scripts -->
