--- a/bonus.html
+++ b/bonus.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contenu Bonus du portfolio de Pierre-Loup Perez - Web Developper, jeux vidéos, bravo vous avez trouvé la page la plus fun.">
-    <title>Bonus Page - Pierre-Loup Perez - Web Developper</title>
+    <meta name="description" content="Contenu Bonus du portfolio de Pierre-Loup Perez - Web Developer, jeux vidéos, bravo vous avez trouvé la page la plus fun.">
+    <title>Bonus Page - Pierre-Loup Perez - Web Developer</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -86,7 +86,7 @@
      <main class="container text-center">
        <article class="text-center alert alert-secondary shadow">
          <h2>Bravo</h2>
-         <p>Vous etes arrivés sur la page la plus intéressante du site.</p>
+         <p>Vous êtes arrivés sur la page la plus intéressante du site.</p>
          <p>Vous pourrez trouver ici, un jeu pour l'instant, mais j'espère assez vite pouvoir vous en proposer plus</p>
          <p><strong>Amusez-vous bien!!</strong></p>
         </article>
@@ -120,19 +120,20 @@
       <a href="#top" class="btn btn-secondary me-5 shadow">Remonter</a>
     </div>
 
-   <!-- Footer -->
-   <footer class="row text-center justify-content-center pt-3 mx-1">
+  <!-- Footer -->
+  <footer class="row text-center justify-content-center pt-3 mx-1">
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Où me trouver?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
       <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
       <h4>Projets à voir</h4>
       <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
-      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+      <a href="https://maitressege.fr" target="_blank">Blog de Maîtresse Gé</a>
     </section>
 
     <section class="col-12 col-sm-6 col-md-4 row">
@@ -141,7 +142,9 @@
       <a href="mentions.html">Mentions Légales</a>
       <a href="contact.html">Contactez-moi</a>
     </section>
-    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+    <p class="col-12 mt-2">
+      &copy; <span id="annee"></span> - Pierre-Loup Perez
+    </p>
   </footer>
 
     <!-- Scripts -->
